# QtWavConverter

./: CMakeLists.txt  LameEncoder.cpp  LameEncoder.h  README.md  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
